log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 12:06:44 AM UTC 2026: 
 tests:  0|6
========================================
c02545c
Fri May 15 12:20:23 AM UTC 2026: 
 graph.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:34:42: error: too few arguments to function ‘is_equal_string’
   34 |     new_graph->adjacencyMap = map_create(is_equal_string());
      |                                          ^~~~~~~~~~~~~~~
graph.c:21:5: note: declared here
   21 | int is_equal_string(void *key1, void *key2) {
      |     ^~~~~~~~~~~~~~~
42b0414
Fri May 15 12:20:42 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:34:58: error: expected expression before ‘void’
   34 |     new_graph->adjacencyMap = map_create(is_equal_string(void *key1, void *key2));
      |                                                          ^~~~
graph.c:34:42: error: too few arguments to function ‘is_equal_string’
   34 |     new_graph->adjacencyMap = map_create(is_equal_string(void *key1, void *key2));
      |                                          ^~~~~~~~~~~~~~~
graph.c:21:5: note: declared here
   21 | int is_equal_string(void *key1, void *key2) {
      |     ^~~~~~~~~~~~~~~
c6cb713
Fri May 15 12:21:03 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:34:31: error: too few arguments to function ‘map_create’
   34 |     new_graph->adjacencyMap = map_create();
      |                               ^~~~~~~~~~
In file included from graph.c:8:
map.h:14:6: note: declared here
   14 | Map *map_create(int (*is_equal)(void *key1, void *key2)); // unsorted map
      |      ^~~~~~~~~~
613bc79
Fri May 15 12:29:13 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4e44a58
Fri May 15 12:32:44 AM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f4c8f30
Fri May 15 12:34:28 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8a22dec
Fri May 15 12:35:56 AM UTC 2026: 
 tests:  0|0
056735e
Fri May 15 12:38:37 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dc23976
